<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/background"
	android:gravity="center_horizontal">

	<ScrollView android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1.0">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:baselineAligned="false"
			android:orientation="vertical" android:paddingLeft="10dip"
			android:paddingRight="10dip">

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="13sp"
				android:textStyle="bold" android:layout_gravity="center_vertical"
				android:text="@string/phoneNumberStr" />

			<EditText android:id="@+id/edit_bl_number_editor"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" android:phoneNumber="true"
				android:singleLine="true" android:numeric="integer"
				android:maxLength="20" />

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="13sp"
				android:textStyle="bold" android:layout_gravity="center_vertical"
				android:text="@string/nameNumberStr" />

			<EditText android:id="@+id/edit_bl_name_editor"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" android:singleLine="true"
				android:maxLength="20" />

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:paddingLeft="5dip" android:paddingRight="5dip">
				<CheckBox android:id="@+id/block_sms_check_box"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/block_from_number"
					android:layout_weight="1.0" android:layout_gravity="left|center_vertical" />

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="right">
		<Button android:id="@+id/edit_bl_number_view_done_btn"
			android:text="@string/btn_done" android:layout_width="wrap_content"
			android:layout_height="40dip" android:minWidth="90dip" />
	</LinearLayout>

</LinearLayout>
